--- a/web/index.html
+++ b/web/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.cssg">
-    <title>Journey into React</title>
+    <title>ReactWebWithNative</title>
 </head>
 <body>
 <div id="app"></div>
